# cython-iscsi

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml
src/: iscsi.pyx
tests/: __init__.py  iscsi_test.py
