# SPDX-FileCopyrightText: 2020 The cython-iscsi Authors
#
# SPDX-License-Identifier: MIT

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[build-system]
requires = [
  'Cython',
  'pkgconfig',
  'setuptools >= 42',
  'setuptools_scm[toml]>=3.4',
  'wheel',
]

[tool.black]
line-length = 88
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ['iscsi']

[tool.setuptools_scm]
