# SPDX-FileCopyrightText: 2014 The cython-iscsi Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = cython-iscsi
description = Cython-based wrapper for libiscsi.
url = https://github.com/python-scsi/cython-iscsi
license_files =
   AUTHORS
   LICENSES/*
long_description = file:README.md
long_description_content_type: text/markdown
maintainer = Markus Rosjat
maintainer_email = markus.rosjat@gmail.com
license = LGPL-2.1+
keywords =
    scsi iscsi
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
packages = find:

[options.package_data]
* =
    *.pyx
    *.pxd

[options.extras_require]
dev =
    Cython
    mypy
    pkgconfig
    pre-commit
    pytest
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
